# ipk-library

./: CMakeLists.txt
src/: lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  types.h
tests/: lexer_tests.cpp  syntax_tests.cpp
